Complete Expense Tracker backend with JWT, CRUD, filter, sort, PnL